Add git to list of deployed modules

--- a/deploy/configs/applications/modules.yaml
+++ b/deploy/configs/applications/modules.yaml
@@ -37,6 +37,7 @@ modules:
       - connectome-tools
       - emsim
       - functionalizer
+      - git
       - meshball
       - model-neocortex
       - nest
